# road-to-plus-plus

./: .gitignore  README.md
chapter-1/: .gitignore  Makefile  README.md  ctor.cpp  destruct.cc  hello-world.cpp
chapter-2/: README.md  main.cpp
chapter-2/2.1/: Makefile  gol.cpp  gol.hpp  life.hpp
chapter-2/2.2/: Makefile  README.md  gol.hpp  gol.ppm  main.cpp
chapter-3/: Makefile  README.md
chapter-3/3.1/: Makefile  README.md  main.cpp  sha1.cpp  sha1.hpp
chapter-3/3.2/: convolute.cc
chapter-3/3.3/: hist_equ.cc  ppm.h
chapter-3/3.4/: dft.cc
chapter-3/3.5/: Makefile  README.md  TDigest.cc  TDigest.hh  gen_data.cc  tbench.cc  tdigest.cc  test_tdigest.cc  texample.cc
chapter-3/lib/: ppm.h
chapter-4/: README.md
chapter-4/4.1/: Makefile  README.md  main.cpp  perlin.cpp  perlin.hpp  test.cpp
chapter-4/4.2/: .gitignore  Makefile  case-1.cc  case-1.cpp  case-2  case-2.cc  case-2.cpp  case-3.cc  case-4.cc  case-5.cc
chapter-5/: .gitignore  README.md
chapter-5/5.1/: 1024x1024.ppm  256x256.ppm  Makefile  README.md  main.cpp  sandpile.cpp  sandpile.hpp
chapter-5/5.2/: README.md  config.ini  main.cc
chapter-5/5.3/: Makefile  README.md  sandpile.cc
chapter-acceleration/: .gitignore  Makefile  README.md
chapter-acceleration/cuda/: .gitignore  Makefile  README.md  class.cu  hello.cu  vector_add.cu
chapter-acceleration/cuda/datatrn/: README.md  exp-1.cu  exp-2.cu  exp-3.cu  exp-4.cu  exp-5.cu  exp-6.cu  exp-7.cu  exp-8.cu  exp-9.cu  mem.cu
chapter-acceleration/cuda/interop/: Makefile  interop.cc  lib.cu  lib.cuh
chapter-acceleration/openacc/: .gitignore  Makefile  README.md  collide_gpu.c  vector_add.cc
chapter-acceleration/opencl/: Makefile  README.md  atomic.cc  atomic.cl  cl_info.cc  gol.cc  gol.cl  ppm.h  sandpile.cc  sandpile.cl  vector_add.cc  vector_add.cl
chapter-acceleration/openmp/: .gitignore  Makefile  README.md  atrous-wavelet-recon.cc  collide.c  collide_gpu.cc  reduction.cc  vector_add.cc
chapter-asm/: .gitignore  README.md  exp-1.cc
chapter-auto-vectorization/: .gitignore  CMakeLists.txt  README.md  case-study-1.cc  case-study-2.cc  case-study-4.cc  case-study.cc  data-parallel.md
chapter-auto-vectorization/accumulate/: Makefile  README.md  accumulate-case1.cc
chapter-auto-vectorization/gaussian-filter/: Makefile  README.md  common.h  fits-helper.h  reference.h  timgauss.c
chapter-auto-vectorization/omp/: Makefile
chapter-auto-vectorization/omp/reduction/: reduction.cc
chapter-auto-vectorization/omp/unroll/: unroll.cc
chapter-auto-vectorization/sandpile/: bench-sandpile.cc  sandpile-auto.cc  sandpile-sse.cc  sandpile.cc
chapter-auto-vectorization/sandpile-auto-vectorize/: CMakeLists.txt  Config.h.in  README.md  bench.cc  main.cc
chapter-auto-vectorization/sandpile-auto-vectorize/sandpile/: CMakeLists.txt  sandpile.cc  sandpile.hh
chapter-auto-vectorization/simd-seq/: Makefile  READMD.md
chapter-auto-vectorization/simd-seq/complex-dot/: README.md  base.cc  complex-dot.cc  complex2-simd.cc  complex2.cc  complex4-simd.cc  complex4.cc  poc.cc  soa.cc
chapter-auto-vectorization/simd-seq/complex-dot/memo/: Makefile  memo.md  reference.bib
chapter-auto-vectorization/simd-seq/grid/: base.cc  comm.hh  complex-simd-v2.cc  complex-simd-v3.cc  complex2-simd.cc  complex4-simd.cc  grid.cc  poc.cc  ptr.cc  simd-complex-v2.hh  simd-complex-v3.hh  simd-complex.hh
chapter-auto-vectorization/simd-seq/stsa/: CMakeLists.txt  avx.cc  simd-complex.hh  sse.cc  stsoa.cc
chapter-benchmark/: CMakeLists.txt  README.md  bench-abs.hh  bench-max.hh  benchmarks.cc
chapter-casa/: .gitignore  CMakeLists.txt  README.md
chapter-casa/exp-1/: CMakeLists.txt  main.cc
chapter-casa/exp-2/: CMakeLists.txt  main.cc
chapter-casa/exp-3/: CMakeLists.txt  main.cc
chapter-casa/exp-4/: CMakeLists.txt  main.cc
chapter-casa/exp-5/: CMakeLists.txt  main.cc
chapter-casa/exp-6/: CMakeLists.txt  main.cc
chapter-casa/exp-7/: main.cc
chapter-casa/exp-gridder/: CMakeLists.txt  gridder.cc
chapter-cmake/: README.md
chapter-cmake/exp-9/: CMakeLists.txt
chapter-cmake/exp-eight/: CMakeLists.txt
chapter-cmake/exp-five/: CMakeLists.txt  main.cc
chapter-cmake/exp-four/: CMakeLists.txt  main.cc
chapter-cmake/exp-one/: CMakeLists.txt
chapter-cmake/exp-seven/: CMakeLists.txt  hello.cc
chapter-cmake/exp-six/: CMakeLists.txt  Makefile  main.cc
chapter-cmake/exp-three/: CMakeLists.txt  Config.h.in  main.cc
chapter-cmake/exp-two/: CMakeLists.txt  main.cc
chapter-cmake/exp-two/arith/: CMakeLists.txt  arith.cc
chapter-flex-bison/: CMakeLists.txt  README.md
chapter-flex-bison/exp-four/: CMakeLists.txt  config.l  config.y
chapter-flex-bison/exp-one/: .gitignore  Makefile  content.txt  test.l
chapter-flex-bison/exp-three/: CMakeLists.txt  content.txt  lang.l
chapter-flex-bison/exp-two/: .gitignore  Makefile  lang.l  lang.y  test.cc
chapter-fortran/: Makefile.common  README.md
chapter-fortran/cuda/: Makefile  cudaHello.cuf
chapter-fortran/f90/: Makefile  function.f90  hello.f90  parse_arg.f90  powers.f90  sum.f90
chapter-libs/: CMakeLists.txt
chapter-libs/cxxplot/: cxxplot.hh  usage.cc
chapter-libs/minis/: example.c  ppm.h
chapter-libs/ppm/: CMakeLists.txt  README.md  font.hpp  ppm.cpp  ppm.hpp
chapter-libs/ppm/examples/: CMakeLists.txt  README.md  ppm_random_distribution.cc  ppm_write_text.cc
chapter-llvm/: .gitignore  README.md
chapter-llvm/exp-1/: Makefile  count-pass.cc  hello.cc
chapter-multi-process/: README.md
chapter-multi-process/exp-1/: .gitignore  Makefile  read.cc  write.cc
chapter-multi-process/exp-3/: mpi-test  mpi-test.c
chapter-multi-process/exp-4/: exp-4.cc
chapter-multi-process/exp-5/: exp-5.cc
chapter-multi-process/exp-6/: main.cc
chapter-profiling/: .gitignore  Makefile  README.md  leak.cc  sandpile.cc  split-process.pl  srcline-occurance.pl
chapter-shared-mem/: README.md
notebooks/: cxxplot.ipynb
paraphernalia/: .gitignore  Makefile  fork.cpp  omp.cpp  read-ini.cpp  serdes.cc  spawn-pthread.cpp  spawn-thread-11.cpp  sse.cpp  test.ini
(+13 files in other folders)
